--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # MONGODB_URL_LOCAL=mongodb://localhost:27017/signup-otp
 PORT=3001
 JWT_SECRET_KEY=tesseract
+
+TWILIO_SID = 'AC6bbea80f447a366e8b58f7ccaaf2919a'
+TWILIO_AUTH_TOKEN = 'dbefbb7040ecbc88b55c1834c5d471ea'
