--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
     "twbs-pagination": "^1.4.2",
+    "twilio": "^4.12.0",
     "typeahead.js": "^0.11.1"
   }
 }
