--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "codemirror": "^6.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "flag-icon-css": "^4.1.7",
+    "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "jvectormap": "^2.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
