--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.3.0",
     "bootstrap-maxlength": "^1.10.1",
     "chart.js": "^4.3.0",
@@ -26,7 +26,7 @@
     "express-session": "^1.17.3",
     "flag-icon-css": "^4.1.7",
     "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.10.0",
+    "handlebars-helpers": "^0.9.8",
     "hbs": "^4.2.0",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
@@ -36,7 +36,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
+    "nodemon": "^1.14.9",
     "otp-generator": "^4.0.1",
     "owl.carousel": "^2.3.4",
     "path": "^0.12.7",
@@ -44,6 +44,7 @@
     "popper.js": "^1.16.1",
     "progressbar.js": "^1.1.0",
     "pwstabs": "^1.4.0",
+    "razorpay": "^2.9.0",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
     "twbs-pagination": "^1.4.2",
