--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,18 +22,12 @@
     "dotenv": "^16.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "flag-icon-css": "^4.1.7",
-    "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.9.8",
-    "hbs": "^4.2.0",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
     "jvectormap": "^2.0.4",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^1.14.9",
