--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "select2-bootstrap-theme": "^0.1.0-beta.10",
     "twbs-pagination": "^1.4.2",
     "twilio": "^4.12.0",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "voucher-code-generator": "^1.3.0"
   }
 }
