--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.3.0",
     "codemirror": "^6.0.1",
     "cookie-parser": "^1.4.6",
+    "datatables.net-dt": "^1.13.5",
     "dotenv": "^16.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
