sevententh file update

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ JWT_SECRET_KEY=tesseract
 
 TWILIO_SID = 'AC6bbea80f447a366e8b58f7ccaaf2919a'
 TWILIO_AUTH_TOKEN = 'f4a5023efc278aab33b9903a6b75da7d'
+
+RAZORPAY_KEY_ID = 'rzp_test_yeqkJtgBPsd4gA'
+RAZORPAY_KEY_SECRET = 'j3lOSCIfBWaXkv60WGrG87qR'
