twentyth file update

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-# MONGODB_URL_LOCAL=mongodb://localhost:27017/signup-otp
+MONGODB_URL="mongodb://0.0.0.0:27017/ProGear"
+
 PORT=3001
-JWT_SECRET_KEY=tesseract
+
+JWT_SECRET_KEY = xY7j2Z9pLqR4aTbN9u6
+JWT_ADMIN_SECRET_KEY = 2$8jK5p@9zTo0
 
 TWILIO_SID = 'AC6bbea80f447a366e8b58f7ccaaf2919a'
 TWILIO_AUTH_TOKEN = 'f4a5023efc278aab33b9903a6b75da7d'
