twenty third file update

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL="mongodb://0.0.0.0:27017/ProGear"
+MONGODB_URL="mongodb+srv://ajithkumarhari011:<password>@progear.vxraphd.mongodb.net/"
 
 PORT=3001
 
