twenty fourth file update

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-MONGODB_URL="mongodb+srv://ajithkumarhari011:<password>@progear.vxraphd.mongodb.net/"
+# MONGODB_URL="mongodb://0.0.0.0:27017/ProGear"
+MONGODB_URL="mongodb+srv://ajithkumarhari011:H3KUbqVJiA03PQCR@progear.vxraphd.mongodb.net/ProGear"
 
 PORT=3001
 
-JWT_SECRET_KEY = xY7j2Z9pLqR4aTbN9u6
+JWT_SECRET_KEY = xY7j2Z9pLqR4aTbN
 JWT_ADMIN_SECRET_KEY = 2$8jK5p@9zTo0
 
 TWILIO_SID = 'AC6bbea80f447a366e8b58f7ccaaf2919a'
