--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ JWT_SECRET_KEY = xY7j2Z9pLqR4aTbN
 JWT_ADMIN_SECRET_KEY = 2$8jK5p@9zTo0
 
 TWILIO_SID = 'AC6bbea80f447a366e8b58f7ccaaf2919a'
-TWILIO_AUTH_TOKEN = 'f4a5023efc278aab33b9903a6b75da7d'
+TWILIO_AUTH_TOKEN = '7992709fe2acbaf156366d571fe165ea'
 
 RAZORPAY_KEY_ID = 'rzp_test_yeqkJtgBPsd4gA'
 RAZORPAY_KEY_SECRET = 'j3lOSCIfBWaXkv60WGrG87qR'
+TWILIO_VERIFY = "VAde95f2b62b501d6fedf7b53c97c3fbf9"
