--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MONGODB_URL="mongodb://0.0.0.0:27017/ProGear"
-MONGODB_URL="mongodb+srv://ajithkumarhari011:H3KUbqVJiA03PQCR@progear.vxraphd.mongodb.net/ProGear"
+MONGODB_URL="mongodb://0.0.0.0:27017/ProGear"
+# MONGODB_URL="mongodb+srv://ajithkumarhari011:H3KUbqVJiA03PQCR@progear.vxraphd.mongodb.net/ProGear"
 
 PORT=3001
 
